--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
     "glob-parent": "^6.0.2",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "mysql": "^2.18.1",
+    "pg": "^8.11.1",
+    "prisma": "^4.16.2"
   },
   "scripts": {
-    "dev":  "npx nodemon",
+    "dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/src/index.js"
   }
