--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "glob-parent": "^6.0.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.1",
     "pg": "^8.11.1",
     "prisma": "^4.16.2"
   },
