feat: added ping package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.11.1",
+    "ping": "^0.4.4",
     "prisma": "^4.16.2"
   },
   "scripts": {
