--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "console-log-colors": "^0.4.0",
     "dotenv": "^16.3.1",
     "glob-parent": "^6.0.2",
     "ip": "^1.1.8",
