--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "glob-parent": "^6.0.2",
     "ip": "^1.1.8",
     "mysql": "^2.18.1",
+    "node-cache": "^5.1.2",
     "pg": "^8.11.1",
     "ping": "^0.4.4",
     "prisma": "^4.16.2",
